# mercury-framework

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LAB_SETUP.md  PLUGIN_AUTHOR_GUIDE.md  README.md  RELEASE_NOTES.md  RESPONSIBLE_USE.md  SECURITY.md  built-light-release.ps1  pyproject.toml  requirements.txt  run.py  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/: Usage.txt  index.md
mercury/: __init__.py  __main__.py  cli.py  colors.py  console.py  device_profiles.py  diagnostics.py  launcher.py  metadata.py  plugin_api.py  plugin_loader.py  reporting.py  sandbox.py  simulated_contacts.py  simulated_device.py  simulated_sensors.py  simulated_storage.py  ui.py
mercury_plugins/compliance_checklist/: manifest.json  plugin.py
mercury_plugins/defensive_port_scan/: manifest.json  plugin.py
mercury_plugins/educational_offense_template/: manifest.json
mercury_plugins/example_simulator/: manifest.json  plugin.py
mercury_plugins/incident_reporter/: manifest.json  plugin.py
mercury_plugins/local_log_watch/: manifest.json  plugin.py
mercury_plugins/plugin_template/: manifest.json
mercury_plugins/sandbox_healthcheck/: manifest.json  plugin.py
mercury_plugins/telemetry_snapshot/: manifest.json  plugin.py
mercury_plugins/templates/android-sim/: manifest.json  plugin.py
mercury_plugins/templates/firmware-sim/: manifest.json  plugin.py
mercury_plugins/templates/forensic-sim/: manifest.json  plugin.py
mercury_plugins/templates/ios-sim/: manifest.json  plugin.py
mercury_plugins/templates/linux-sim/: manifest.json  plugin.py
mercury_plugins/templates/macos-sim/: manifest.json  plugin.py
mercury_plugins/templates/network-sim/: manifest.json  plugin.py
mercury_plugins/templates/windows-sim/: manifest.json
sandbox/: Dockerfile  README.md  build_linux.sh  build_windows.ps1  docker-compose.yml  run_linux.sh  run_windows.ps1
scripts/: build_arch.sh  build_debian.sh  build_macos_installer.sh  build_msi.ps1  build_packages.sh  build_windows_installer.ps1  prepare_unix_packages.py
tests/: test_launcher.py  test_metadata.py  test_plugin_lifecycle.py  test_plugin_loader.py  test_quickstart.py  test_reporting.py  test_sandbox_policy.py  test_simulated_device.py
tools/: check_manifests.py
