[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-framework"
version = "0.2.0"
description = "Mercury — educational, safe security simulation framework"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "mercury*",
    "mercury_plugins*",
    "detection*",
    "payload_descriptors*"
]

[tool.setuptools.package-data]
"*" = [
    "*.json",
    "*.yaml",
    "*.yml",
    "*.md"
]
