[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-framework"
version = "0.3.0"
description = "Mercury - educational, safe security simulation framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Voltsparx", email = "voltsparx@gmail.com" }
]
keywords = ["security", "simulation", "training", "plugin", "sandbox", "defensive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Education"
]
dependencies = [
    "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.scripts]
mercury = "mercury.launcher:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "mercury*",
    "mercury_plugins*",
    "detection*",
    "payload_descriptors*"
]

[tool.setuptools.package-data]
"*" = [
    "*.json",
    "*.yaml",
    "*.yml",
    "*.md"
]
